<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QRGade</string>
    <string name="action_settings">Settings</string>
    <string name="about">Acerca de</string>
    <string name="scan">SCAN</string>
    <string name="codeText">Entre el código</string>
    <string name="texto">Código: </string>
    <string name="logo">logo</string>
    <string name="title_activity_activity_my">activity_my</string>
    <string name="btnVolver">VOLVER</string>

    <string name="noconnection">La conexión a internet no se encuentra disponible en estos momentos</string>
    <string name="ok">Aceptar</string>
    <string name="error">Error</string>
    <string name="atencion">ATENCIÓN!!</string>
    <string name="Imagen_Producto">Imagen del Producto</string>
    <string name="No_Description">Este producto no cuenta con una descripción</string>
    <string name="Codigo">Código:</string>
    <string name="logo_large">Logo</string>
    <string name="Logo_Low">Logo Low</string>
    <string name="logo_low">logo_low</string>
    <string name="logo_lows">logo low</string>

    <string name="dydsistemas">Desarrollado por DyDSistemas</string>
    <string name="contacto">E-Mail: soporte@dydsistemas.com.ar</string>
    <string name="web">www.dydsistemas.com.ar</string>
    <string name="logodydsistemas">Logo DyDSistemas</string>
    <string name="descripcion">Producto desarrollado para Gade Elecricidad.</string>
    <string name="salir">salir</string>
    <string name="volver">volver</string>

</resources>
