<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/templatemo_bg" >

    <ImageView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/templatemo_logo"
        android:contentDescription="@string/logo_large"
        android:minWidth="300dp"
        android:minHeight="100dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:text="@string/Codigo"
            android:id="@+id/lblCodigo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtCodigo"
            android:layout_gravity="left"
            android:textAppearance="@android:style/TextAppearance.Medium" />

    </LinearLayout>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imgImagen"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/Imagen_Producto"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtPrecio"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:textColor="#ffff030f"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDescripcion"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="20dp"
            android:textColor="#ff040a83" />
    </ScrollView>

</LinearLayout>